# sso

./: Cargo.toml  Dockerfile
.github/workflows/: docker-publish.yml
config/: Settings.toml
src/: index.html  main.rs  private_key.pem  public_key.pem  types.rs
