[package]
name = "sso"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
openidconnect = "3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
uuid = { version = "1.7", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
krb5-rs = "0.1"
chrono = "0.4"
config = "0.14"
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
